# opengl-group

./: .gitignore  CMakeLists.txt  README.md
assets/: fragment_shader.glsl  vertex_shader.glsl
common/: CMakeLists.txt  control.cpp  control.hpp
cube/: CMakeLists.txt  cube.cpp
cube-m/: CMakeLists.txt  cube-m.cpp
cube-m/assets-m/: fragmentshadder.glsl  vertexshadder.glsl
examples/: CMakeLists.txt
examples/1-window/: CMakeLists.txt  window.cpp
examples/2-triangle/: CMakeLists.txt  triangle.cpp
examples/2-triangle/assets/: vertex_shader.glsl
examples/3-cube/: CMakeLists.txt  cube.cpp
examples/3-cube/assets/: fragment_shader.glsl  vertex_shader.glsl
examples/4-texture/: CMakeLists.txt  texture.cpp
examples/4-texture/assets/: fragment_shader.glsl  vertex_shader.glsl
gulgl/: CMakeLists.txt  buffer.hpp  dummy.cpp  errors.hpp  gulgl  program.hpp  shader.hpp  texture.hpp  uniform.hpp  vao.hpp  window.hpp
triangle/: CMakeLists.txt  triangle-m.cpp  triangle-s.cpp  triangle.cpp
triangle/assets-m/: vertexshadder.glsl
window/: CMakeLists.txt  window-j.cpp
