add_executable(window-m window-m.cpp)
target_link_libraries(window-m gulgl)

add_executable(window-h window-h.cpp)
target_link_libraries(window-h gulgl)

add_executable(window-d window-d.cpp)
target_link_libraries(window-d gulgl)

add_executable(window-s window-s.cpp)
target_link_libraries(window-s gulgl)

add_executable(window-j window-j.cpp)
target_link_libraries(window-j gulgl)

add_executable(window window.cpp)
target_link_libraries(window gulgl)
